--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,9 @@
-Building FooCoin
+Building watercoin
 
-See doc/readme-qt.rst for instructions on building foocoin-qt,
+See doc/readme-qt.rst for instructions on building watercoin-qt,
 the intended-for-end-users, nice-graphical-interface, reference
-implementation of FooCoin.
+implementation of watercoin.
 
-See doc/build-*.txt for instructions on building foocoin,
+See doc/build-*.txt for instructions on building watercoin,
 the intended-for-services, no-graphical-interface, reference
-implementation of FooCoin.
+implementation of watercoin.
